[project]
name = "cohorts"
version = "0.1.0"
description = "The Rebble cohorts API"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "honeycomb-beeline>=3.6.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
debug_server = "serve_debug:main"
